<resources>
    <string name="app_name">Calculadora</string>
    <string name="calculadora">Calculadora</string>
    <string name="numero1">Numero 1</string>
    <string name="numero2">Numero 2</string>
    <string name="limpiar">Limpiar</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <array name="operaciones">
        <item>@string/sumar</item>
        <item>@string/restar</item>
        <item>@string/multiplicar</item>
        <item>@string/dividir</item>
    </array>
    <string name="error_numero1">Digite Numero 1</string>
    <string name="error_numero2">Digite Numero 2</string>
    <string name="error_numero3">No se puede dividir por 0</string>

</resources>
